tests/fixtures/negative/code-style/ProhibitSuppressWarnings_SuppressMultipleRules.cls
// Violation: @SuppressWarnings annotation with multiple rules
@SuppressWarnings('PMD.UnusedLocalVariable, PMD.UnusedPrivateMethod')
public class Example3 {
    private int unused;
    private void unusedMethod() {}
}

